--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <script src="https://use.fontawesome.com/87a154057b.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto:300i,300,500,700" rel="stylesheet">
