--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <script src="https://use.fontawesome.com/87a154057b.js"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+  i['GoogleAnalyticsObject'] = r;
+  (i[r] =
+    i[r] ||
+    function() {
+      (i[r].q = i[r].q || []).push(arguments);
+    }), (i[r].l = 1 * new Date());
+  (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+  a.async = 1;
+  a.src = g;
+  m.parentNode.insertBefore(a, m);
+})(
+  window,
+  document,
+  'script',
+  'https://www.google-analytics.com/analytics.js',
+  'ga',
+);
+
+ga('create', 'UA-97920002-1', 'auto');
+ga('send', 'pageview');
+</script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto:300i,300,500,700" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
