--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <script type="text/javascript" src="//my.hellobar.com/19633bb4ed1f2352dda88feee82942f7f3dd0cde.js"></script>
   </body>
 </html>
